cmd/sphinx-agent/k8s/01-sphinx-agent.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sphinx-agent
  namespace: kube-system
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sphinx-agent
  template:
    metadata:
      labels:
        app: sphinx-agent
    spec:
      containers:
      - name: sphinx-agent
        image: entropypool/sphinx-agent:latest
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: sphinx-agent
  namespace: kube-system
spec:
  ports:
  - name: api
    port: 8080
