cmd/sphinx-agent/k8s/02-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sphinx-agent-npool-top-ingress
  namespace: kube-system
  annotations:
    k8s.kuboard.cn/displayName: sphinx-agent
    k8s.kuboard.cn/workload: sphinx-agent
    kubernetes.io/ingress.class: "traefik-internet"
spec:
  rules:
  - host: api.npool.top
    http:
      paths:
      - path: /sphinx-agent
        backend:
          serviceName: sphinx-agent
          servicePort: http

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sphinx-agent-xpool-top-ingress
  namespace: kube-system
  annotations:
    k8s.kuboard.cn/displayName: sphinx-agent
    k8s.kuboard.cn/workload: sphinx-agent
    kubernetes.io/ingress.class: "traefik-internet"
spec:
  rules:
  - host: api.xpool.top
    http:
      paths:
      - path: /sphinx-agent
        backend:
          serviceName: sphinx-agent
          servicePort: http
